@@ -18,46 +18,6 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 
 testConstraint testnrelevels [llength [info commands testnrelevels]]
 
-if {[testConstraint testnrelevels]} {
-    namespace eval testnre {
-	namespace path ::tcl::mathop
-	#
-	# [testnrelevels] returns a 6-list with: C-stack depth, iPtr->numlevels,
-	# cmdFrame level, callFrame level, tosPtr and callback depth 
-	#
-	variable last [testnrelevels] 
-	proc depthDiff {} {
-	    variable last
-	    set depth [testnrelevels]
-	    set res {}
-	    foreach t $depth l $last {
-		lappend res [expr {$t-$l}]
-	    }
-	    set last $depth
-	    return $res
-	}
-	proc setabs {} {
-	    variable abs [- [lindex [testnrelevels] 0]
-	}
-
-	variable body0 {
-	    set x [depthDiff]
-	    if {[incr i] > 10} {
-		namespace upvar [namespace qualifiers \
-			[namespace origin depthDiff]] abs abs
-		incr abs [lindex [testnrelevels] 0]
-		return [list [lrange $x 0 3] $abs]
-	    }
-	}
-	proc makebody txt {
-	    variable body0
-	    return "$body0; $txt"
-	}
-	namespace export *
-    }
-    namespace import testnre::*
-}
-
 set lambda [list {{start 0} {stop 10}} {
     # init
     set i    $start
